<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Unidad2">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="-104dp"
        tools:layout_editor_absoluteY="-161dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#ffafafff"
                android:text="@string/U1Act1"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffafafff"
                android:text="@string/U2Act_1"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#ffafafff"
                android:text="@string/Escribenombre"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editTextTextMultiLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/Escribeaqui"
                android:inputType="textMultiLine"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#ffafafff"
                android:text="@string/Fortalezas"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editTextTextMultiLine2"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/Escribeaqui"
                android:inputType="textMultiLine" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#ffafafff"
                android:text="@string/Oportunidades"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editTextTextMultiLine3"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/Escribeaqui"
                android:inputType="textMultiLine" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#ffafafff"
                android:text="@string/Debilidades"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editTextTextMultiLine4"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/Escribeaqui"
                android:inputType="textMultiLine" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#ffafafff"
                android:text="@string/Amenazas"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editTextTextMultiLine5"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/Escribeaqui"
                android:inputType="textMultiLine" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#9A4EF3F3"
                android:text="@string/U1Act2"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#9A4EF3F3"
                android:text="@string/U2Act_2"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="213dp"
                android:contentDescription="@string/U1Act2"
                app:srcCompat="@drawable/autoestima" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#FFF177"
                android:text="@string/U1Act3"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFF177"
                android:text="@string/U2Act_3"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="276dp"
                app:srcCompat="@drawable/jimmy" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>