<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Entretenimiento">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Ent1"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="Video"
                android:text="@string/Ent_vid"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="24sp" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <Button
                        android:id="@+id/button19"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:background="@drawable/cecyt1"
                        android:onClick="Cecyt1"
                        app:backgroundTint="@null" />

                    <Button
                        android:id="@+id/button20"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:background="@drawable/poli"
                        android:onClick="IPN"
                        app:backgroundTint="@null" />/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <Button
                        android:id="@+id/button21"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:background="@drawable/saes"
                        android:onClick="Saes"
                        app:backgroundTint="@null" />/>

                    <Button
                        android:id="@+id/button22"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:onClick="BBC"
                        android:text="@string/Quepasa"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:textSize="24sp" />
                </TableRow>

            </TableLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>